# TMDB-API-Python

./: .gitignore  LICENSE  README.md  build_requirements.txt  encrypt.py  pyproject.toml  pytest.ini  release.py  requirements.txt  run_test.py
.github/workflows/: release.yml
docs/: readme_template.md
docs/changelogs/: changelog_v0.0.1.md  changelog_v1.1.0.md  changelog_v1.1.1.md
tmdbapi/: __init__.py  _core.py  credential.py  creds.py  exceptions.py
tmdbapi/api3/: __init__.py  account.py  authentication.py  certifications.py  changes.py  collections.py  companies.py  configuration.py  credits.py  discover.py  find.py  genres.py  guest_sessions.py  keywords.py  lists.py  movie_lists.py  movies.py  networks.py  params_info_v3.py  people.py  reviews.py  search.py  trending.py  tv_episode_groups.py  tv_episodes.py  tv_seasons.py  tv_series.py  tv_series_lists.py  watch_providers.py
tmdbapi/api4/: __init__.py  account.py  auth.py  lists.py  params_info_v4.py
tmdbapi/integration/: __init__.py  auth.py
tmdbapi/tests/: .gitignore  __init__.py  conftest.py  test_tmdbapi.py
tmdbapi/tests/api3/: test_account.py  test_authentication.py  test_certifications.py  test_changes.py  test_collections.py  test_companies.py  test_configuration.py  test_credits.py  test_discover.py  test_find.py  test_genres.py  test_guest_sessions.py  test_keywords.py  test_lists.py  test_movie_lists.py  test_movies.py  test_networks.py  test_people.py  test_reviews.py  test_search.py  test_trending.py  test_tv_episode_groups.py  test_tv_episodes.py  test_tv_seasons.py  test_tv_series.py  test_tv_series_lists.py  test_watch_providers.py
tmdbapi/tests/api4/: test_account.py  test_auth.py  test_lists.py
