[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tmdbapi", "tmdbapi.api3", "tmdbapi.api4", "tmdbapi.integration",
            "tmdbapi.tests", "tmdbapi.tests.api3", "tmdbapi.tests.api4"]

[project]
name = "TMDB-Py"
version = "v1.1.1"
license = {file = "LICENSE"}
authors = [
  {name="Patrick Liu", email="32678320+patrick-csliu@users.noreply.github.com"}
]
maintainers = [
  {name="Patrick Liu", email="32678320+patrick-csliu@users.noreply.github.com"}
]
description = "TheMovieDB (TMDB) API Python Request Library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pytest",
  "Requests",
  "pytest-assume",
  "pytest-dependency",
  "cryptography",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/patrick-csliu/TMDB-API-Python"
"Bug Tracker" = "https://github.com/patrick-csliu/TMDB-API-Python/issues"
Repository = "https://github.com/patrick-csliu/TMDB-API-Python.git"
# Documentation = "" # No doc currently
# Changelog = "" # No change log currently
